--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
+		"mongodb": "^6.7.0",
 		"mongoos": "^0.0.1-security",
 		"mongoose": "^8.4.1"
 	},
